--- a/app/src/main/res/layout/activity_general_menu.xml
+++ b/app/src/main/res/layout/activity_general_menu.xml
@@ -172,7 +172,7 @@
                 <TextView
                     android:layout_height="wrap_content"
                     android:layout_width="80dip"
-                    android:text="Égalisation histogramme"
+                    android:text="Égalisation histo"
                     android:textAppearance="?android:attr/textAppearanceSmall" android:gravity="center"/>
             </LinearLayout>
 
@@ -211,13 +211,6 @@
                     android:text="Choix couleur"
                     android:textAppearance="?android:attr/textAppearanceSmall" android:gravity="center"/>
             </LinearLayout>
-
-
-            <ImageButton
-                android:layout_width="100dip"
-                android:layout_height="100dip"
-                android:id="@+id/crop"
-                android:src="@android:drawable/ic_menu_crop"/>
 
             <Button
                 android:text="Zoom"
@@ -275,84 +268,191 @@
         </ScrollView>
     </HorizontalScrollView>
 
-    <Button
-        android:text="Valider"
-        android:layout_width="180dip"
-        android:layout_height="40dip"
-        android:id="@+id/ok"
-        android:layout_alignParentBottom="true"/>
-
-    <Button
-        android:text="Annuler"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/seekbars_interface"
         android:layout_width="match_parent"
-        android:layout_height="40dip"
-        android:id="@+id/cancel"
-        android:layout_toRightOf="@id/ok"
-        android:layout_toEndOf="@id/ok"
-        android:layout_alignParentBottom="true"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        tools:context="com.example.emmaveillat.finalproject.GeneralMenu">
+        <Button
+            android:text="Valider"
+            android:layout_width="180dip"
+            android:layout_height="40dip"
+            android:id="@+id/ok"
+            android:layout_alignParentBottom="true"/>
 
-    <Button
-        android:text="Test"
+        <Button
+            android:text="Annuler"
+            android:layout_width="match_parent"
+            android:layout_height="40dip"
+            android:id="@+id/cancel"
+            android:layout_toRightOf="@id/ok"
+            android:layout_toEndOf="@id/ok"
+            android:layout_alignParentBottom="true"/>
+
+        <Button
+            android:text="Test"
+            android:layout_width="match_parent"
+            android:layout_height="40dip"
+            android:id="@+id/test"
+            android:layout_above="@id/ok"/>
+
+        <SeekBar
+            android:id="@+id/seekbar1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:progress="0"
+            android:layout_above="@id/test"
+            android:layout_marginBottom="10dip"/>
+
+        <TextView
+            android:id="@+id/textsb1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/seekbar1"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:textAppearance="?android:attr/textAppearanceSmall"/>
+
+        <TextView
+            android:id="@+id/valsb1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/seekbar1"
+            android:layout_toEndOf="@id/textsb1"
+            android:layout_toRightOf="@id/textsb1"
+            android:textAppearance="?android:attr/textAppearanceSmall"/>
+
+        <SeekBar
+            android:id="@+id/seekbar2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:progress="0"
+            android:layout_above="@+id/textsb1" />
+
+        <TextView
+            android:id="@+id/textsb2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/seekbar2"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:textAppearance="?android:attr/textAppearanceSmall"/>
+
+        <TextView
+            android:id="@+id/valsb2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/seekbar2"
+            android:layout_toEndOf="@id/textsb2"
+            android:layout_toRightOf="@id/textsb2"
+            android:textAppearance="?android:attr/textAppearanceSmall"/>
+
+        <SeekBar
+            android:id="@+id/seekbar3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:progress="0"
+            android:layout_above="@+id/textsb2" />
+
+        <TextView
+            android:id="@+id/textsb3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/seekbar2"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:textAppearance="?android:attr/textAppearanceSmall"/>
+
+        <TextView
+            android:id="@+id/valsb3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/seekbar3"
+            android:layout_toEndOf="@id/textsb3"
+            android:layout_toRightOf="@id/textsb3"
+            android:textAppearance="?android:attr/textAppearanceSmall"/>
+    </RelativeLayout>
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/crop_interface"
         android:layout_width="match_parent"
-        android:layout_height="40dip"
-        android:id="@+id/test"
-        android:layout_above="@id/ok"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        tools:context="com.example.emmaveillat.finalproject.GeneralMenu">
 
-    <TextView
-        android:id="@+id/textsb1"
-        android:layout_width="80dip"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/test"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="10dip"
-        android:textAppearance="?android:attr/textAppearanceSmall" android:gravity="center"/>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/crop"
+            android:text="Rogner"
+            android:layout_alignParentBottom="true"
+            android:src="@mipmap/ic_crop_top"/>
 
-    <SeekBar
-        android:id="@+id/seekbar1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:progress="0"
-        android:layout_toRightOf="@+id/textsb1"
-        android:layout_toEndOf="@id/textsb1"
-        android:layout_above="@id/test"
-        android:layout_marginBottom="10dip"/>
+        <SeekBar
+            android:id="@+id/seekbarcrop"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:progress="0"
+            android:max="100"
+            android:layout_above="@+id/crop" />
 
-    <TextView
-        android:id="@+id/textsb2"
-        android:layout_width="80dip"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/textsb1"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:textAppearance="?android:attr/textAppearanceSmall" android:gravity="center"/>
+        <TextView
+            android:id="@+id/textcrop"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/seekbarcrop"/>
 
-    <SeekBar
-        android:id="@+id/seekbar2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:progress="0"
-        android:layout_above="@+id/textsb1"
-        android:layout_toRightOf="@+id/textsb2"
-        android:layout_toEndOf="@id/textsb2" />
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/top"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentTop="true"
+            android:src="@mipmap/ic_crop_top"/>
 
-    <TextView
-        android:id="@+id/textsb3"
-        android:layout_width="80dip"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/textsb2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:textAppearance="?android:attr/textAppearanceSmall" android:gravity="center"/>
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/bot"
+            android:layout_centerHorizontal="true"
+            android:layout_above="@id/textcrop"
+            android:src="@mipmap/ic_crop_bot"/>
 
-    <SeekBar
-        android:id="@+id/seekbar3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:progress="0"
-        android:layout_above="@+id/textsb2"
-        android:layout_toRightOf="@+id/textsb3"
-        android:layout_toEndOf="@id/textsb3"/>
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/left"
+            android:src="@mipmap/ic_crop_left"
+            android:layout_below="@+id/top"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="120dp" />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/right"
+            android:src="@mipmap/ic_crop_right"
+            android:layout_below="@+id/top"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="120dp" />
+
+
+    </RelativeLayout>
 
 
 
