--- a/app/src/main/res/layout/activity_general_menu.xml
+++ b/app/src/main/res/layout/activity_general_menu.xml
@@ -177,6 +177,25 @@
                     android:textAppearance="?android:attr/textAppearanceSmall" android:gravity="center"/>
             </LinearLayout>
 
+
+            <LinearLayout
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_width="wrap_content">
+
+                <ImageButton
+                    android:layout_width="80dip"
+                    android:layout_height="80dip"
+                    android:id="@+id/teinte"
+                    android:background="@drawable/une_couleur"/>
+
+                <TextView
+                    android:layout_height="wrap_content"
+                    android:layout_width="80dip"
+                    android:text="Choix couleur"
+                    android:textAppearance="?android:attr/textAppearanceSmall" android:gravity="center"/>
+            </LinearLayout>
+
             <LinearLayout
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -210,24 +229,6 @@
                     android:layout_height="wrap_content"
                     android:layout_width="80dip"
                     android:text="Extension dynamique"
-                    android:textAppearance="?android:attr/textAppearanceSmall" android:gravity="center"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_width="wrap_content">
-
-                <ImageButton
-                    android:layout_width="80dip"
-                    android:layout_height="80dip"
-                    android:id="@+id/teinte"
-                    android:background="@drawable/une_couleur"/>
-
-                <TextView
-                    android:layout_height="wrap_content"
-                    android:layout_width="80dip"
-                    android:text="Choix couleur"
                     android:textAppearance="?android:attr/textAppearanceSmall" android:gravity="center"/>
             </LinearLayout>
 
@@ -438,6 +439,42 @@
             android:layout_toRightOf="@id/textsb3"
             android:textAppearance="?android:attr/textAppearanceSmall"/>
     </RelativeLayout>
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/show_color"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        tools:context="com.example.emmaveillat.finalproject.GeneralMenu">
+
+        <ImageView
+            android:layout_width="40dip"
+            android:layout_height="20dip"
+            android:id="@+id/color_left"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"/>
+
+        <ImageView
+            android:layout_width="40dip"
+            android:layout_height="20dip"
+            android:id="@+id/color_mid"
+            android:layout_toRightOf="@id/color_left"/>
+
+        <ImageView
+            android:layout_width="40dip"
+            android:layout_height="20dip"
+            android:id="@+id/color_right"
+            android:layout_toRightOf="@id/color_mid"/>
+
+        </RelativeLayout>
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
