--- a/app/src/main/res/layout/activity_photo_loading.xml
+++ b/app/src/main/res/layout/activity_photo_loading.xml
@@ -25,31 +25,22 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_weight="0"
         android:onClick="chargementImage"
         android:text="Chercher une image"
         android:layout_above="@+id/camera"
-        android:layout_marginBottom="12dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <ScrollView
-        android:layout_width="match_parent"
+    <ImageView
+        android:id="@+id/imgView"
+        android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/buttonLoadPicture"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:scaleType="centerInside">
+    </ImageView>
 
-         <ImageView
-             android:id="@+id/imgView"
-             android:layout_width="fill_parent"
-             android:layout_height="match_parent"
-             android:layout_weight="1"
-             android:layout_above="@+id/buttonLoadPicture"
-             android:layout_alignParentLeft="true"
-             android:layout_alignParentStart="true">
-         </ImageView>
-    </ScrollView>
 
     <Button
         android:id="@+id/camera"
