--- a/app/src/main/res/layout/activity_chargement_photo.xml
+++ b/app/src/main/res/layout/activity_chargement_photo.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_photo_loading"
+    android:id="@+id/activity_chargement_photo"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.emmaveillat.finalproject.PhotoLoading">
+    tools:context="com.example.emmaveillat.finalproject.ChargementPhoto">
 
     <Button
         android:text="J'ai choisi mon image !"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
-        android:id="@+id/choice"
+        android:id="@+id/choix"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -47,7 +47,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Prendre une photo"
-        android:layout_above="@+id/choice" />
+        android:layout_above="@+id/choix" />
 
 </RelativeLayout>
 
