--- a/app/src/main/res/layout/activity_menu_general.xml
+++ b/app/src/main/res/layout/activity_menu_general.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_general_menu"
+    android:id="@+id/activity_menu_general"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -10,7 +10,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.emmaveillat.finalproject.GeneralMenu">
+    tools:context="com.example.emmaveillat.finalproject.MenuGeneral">
 
     <HorizontalScrollView
         android:layout_width="match_parent"
