--- a/app/src/main/res/layout/activity_menu_general.xml
+++ b/app/src/main/res/layout/activity_menu_general.xml
@@ -304,11 +304,23 @@
                     android:textAppearance="?android:attr/textAppearanceSmall" android:gravity="center"/>
             </LinearLayout>
 
-            <Button
-                android:text="HSV"
-                android:layout_width="wrap_content"
+            <LinearLayout
                 android:layout_height="wrap_content"
-                android:id="@+id/color" />
+                android:orientation="vertical"
+                android:layout_width="wrap_content">
+
+                <ImageButton
+                    android:layout_width="80dip"
+                    android:layout_height="80dip"
+                    android:id="@+id/color"
+                    android:background="@drawable/hsv"/>
+
+                <TextView
+                    android:layout_height="wrap_content"
+                    android:layout_width="80dip"
+                    android:text="Espace HSV"
+                    android:textAppearance="?android:attr/textAppearanceSmall" android:gravity="center"/>
+            </LinearLayout>
         </LinearLayout>
 
     </HorizontalScrollView>
@@ -509,7 +521,10 @@
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        tools:context="com.example.emmaveillat.finalproject.GeneralMenu">
+        tools:context="com.example.emmaveillat.finalproject.GeneralMenu"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <Button
             android:layout_width="match_parent"
