--- a/app/src/main/res/layout/activity_menu_general.xml
+++ b/app/src/main/res/layout/activity_menu_general.xml
@@ -55,7 +55,7 @@
                 <ImageButton
                     android:layout_width="80dip"
                     android:layout_height="80dip"
-                    android:id="@+id/gray"
+                    android:id="@+id/gris"
                     android:background="@drawable/gris" />
 
                 <TextView
@@ -93,7 +93,7 @@
                 <ImageButton
                     android:layout_width="80dip"
                     android:layout_height="80dip"
-                    android:id="@+id/invert"
+                    android:id="@+id/invers"
                     android:background="@drawable/negatif" />
 
                 <TextView
@@ -240,7 +240,7 @@
                 <ImageButton
                     android:layout_width="80dip"
                     android:layout_height="80dip"
-                    android:id="@+id/pencil1"
+                    android:id="@+id/crayon1"
                     android:background="@drawable/dessin1"/>
 
                 <TextView
@@ -258,7 +258,7 @@
                 <ImageButton
                     android:layout_width="80dip"
                     android:layout_height="80dip"
-                    android:id="@+id/pencil2"
+                    android:id="@+id/crayon2"
                     android:background="@drawable/dessin2"/>
 
                 <TextView
@@ -276,7 +276,7 @@
                 <ImageButton
                     android:layout_width="80dip"
                     android:layout_height="80dip"
-                    android:id="@+id/pencil3"
+                    android:id="@+id/crayon3"
                     android:background="@drawable/dessin3"/>
 
                 <TextView
@@ -312,7 +312,7 @@
                 <ImageButton
                     android:layout_width="80dip"
                     android:layout_height="80dip"
-                    android:id="@+id/color"
+                    android:id="@+id/couleur"
                     android:background="@drawable/hsv"/>
 
                 <TextView
@@ -385,7 +385,7 @@
             android:text="Annuler"
             android:layout_width="match_parent"
             android:layout_height="40dip"
-            android:id="@+id/cancel"
+            android:id="@+id/annul"
             android:layout_toRightOf="@id/ok"
             android:layout_toEndOf="@id/ok"
             android:layout_alignParentBottom="true"/>
@@ -529,7 +529,7 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/crop"
+            android:id="@+id/rogne"
             android:text="Rogner"
             android:layout_alignParentBottom="true"
             android:src="@mipmap/ic_crop_top"/>
@@ -540,7 +540,7 @@
             android:layout_height="wrap_content"
             android:progress="0"
             android:max="100"
-            android:layout_above="@+id/crop" />
+            android:layout_above="@+id/rogne" />
 
         <TextView
             android:id="@+id/textcrop"
@@ -551,7 +551,7 @@
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/top"
+            android:id="@+id/haut"
             android:layout_centerHorizontal="true"
             android:layout_alignParentTop="true"
             android:src="@mipmap/ic_crop_top"/>
@@ -559,7 +559,7 @@
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/bot"
+            android:id="@+id/bas"
             android:layout_centerHorizontal="true"
             android:layout_above="@id/textcrop"
             android:src="@mipmap/ic_crop_bot"/>
@@ -567,9 +567,9 @@
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/left"
+            android:id="@+id/gauche"
             android:src="@mipmap/ic_crop_left"
-            android:layout_below="@+id/top"
+            android:layout_below="@+id/haut"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_marginTop="120dp" />
@@ -577,9 +577,9 @@
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/right"
+            android:id="@+id/droite"
             android:src="@mipmap/ic_crop_right"
-            android:layout_below="@+id/top"
+            android:layout_below="@+id/haut"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="120dp" />
