--- a/app/src/main/res/layout/activity_menu_general.xml
+++ b/app/src/main/res/layout/activity_menu_general.xml
@@ -312,7 +312,7 @@
                 <ImageButton
                     android:layout_width="80dip"
                     android:layout_height="80dip"
-                    android:id="@+id/couleur"
+                    android:id="@+id/hsv"
                     android:background="@drawable/hsv"/>
 
                 <TextView
@@ -459,7 +459,7 @@
             android:id="@+id/textsb3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_above="@id/seekbar2"
+            android:layout_above="@id/seekbar3"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:textAppearance="?android:attr/textAppearanceSmall"/>
